# Sourcerer

./: .gitignore  Cargo.toml  README.MD  srccfg-example.json  srccfg.json
src/: config.rs  hashing.rs  main.rs
src/commands/: add.rs  calculate.rs  init.rs  mod.rs  sync.rs
