[package]
name = "sourcerer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
glob = "0.3.1"
ring = "0.16.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
walkdir = "2.4.0"

[[bin]]
name = "srcr"
path = "src/main.rs"
